# mnsys-cdk-isucon

./: License  README.md  app.py  cdk.json  context.py  pyproject.toml
misc/: bench.sh
mnsys_isucon/: mnsys_isucon_stack.py  user_data.yml
