[tool.poetry]
name = "mnsys-cdk-isucon"
version = "0.1.0"
description = "cdk for isucon"
authors = ["ekusiadadus <ekusiadadus@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aws-cdk-lib="2.27.0"
constructs="10.1.42"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
